--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^3.4.1",
     "mongoose": "^5.13.15",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.15",
     "superagent": "^8.0.0",
     "supertest": "^6.2.4"
