--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "cypress": "^10.7.0",
     "eslint": "^8.23.0",
     "jwt-decode": "^3.1.2",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.3.0",
